--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
 </head>
 
 <body>
-
+  <header class="header-bg">
+    <div class="container header">
+      <img src="./img/bikcraft.svg" alt="Bikcraft" />
+      <nav aria-label="nav-primaria">
+        <ul class="header-menu">
+          <li><a href="">Bicicletas</a></li>
+          <li><a href="">Seguros</a></li>
+          <li><a href="">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 </body>
 
 </html>
