--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
       </nav>
     </div>
   </header>
+
+  <main class="introducao-bg">
+    <div class="container introducao">
+      <div class="introducao-conteudo">
+        <h1>Bicicletas feitas sob medida<span>.</span></h1>
+        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a href="">Selecione a sua</a>
+      </div>
+      <div class="introducao-img">
+        <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta elétrica preta" />
+      </div>
+    </div>
+  </main>
+
 </body>
 
 </html>
