--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="container header">
       <img src="./img/bikcraft.svg" alt="Bikcraft" />
       <nav aria-label="nav-primaria">
-        <ul class="header-menu">
-          <li><a href="">Bicicletas</a></li>
-          <li><a href="">Seguros</a></li>
-          <li><a href="">Contato</a></li>
+        <ul class="header-menu font-1-m">
+          <li><a class="cor-0" href="">Bicicletas</a></li>
+          <li><a class="cor-0" href="">Seguros</a></li>
+          <li><a class="cor-0" href="">Contato</a></li>
         </ul>
       </nav>
     </div>
@@ -31,8 +31,8 @@
   <main class="introducao-bg">
     <div class="container introducao">
       <div class="introducao-conteudo">
-        <h1>Bicicletas feitas sob medida<span>.</span></h1>
-        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
+        <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a class="botao" href="">Selecione a sua</a>
       </div>
       <div class="introducao-img">
