lista de bicicletas

--- a/index.html
+++ b/index.html
@@ -41,6 +41,35 @@
     </div>
   </main>
 
+  <article class="bicicletas-lista">
+    <h2 class="font-1-xxl cor-11 container">escolha a sua<span class="cor-p1">.</span></h2>
+    <ul class="bicicletas-lista-itens">
+      <li>
+        <a href="">
+          <img src="./img/bicicletas/magic-home.jpg" alt="Bicileta" />
+          <h3 class="font-1-xl cor-11">Magic Might</h3>
+          <span class="font-2-m cor-8">R$ 2499</span>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicileta" />
+          <h3 class="font-1-xl cor-11">Nimbus Stark</h3>
+          <span class="font-2-m cor-8">R$ 4999</span>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <img src="./img/bicicletas/nebula-home.jpg" alt="Bicileta" />
+          <h3 class="font-1-xl cor-11">Nebula Cosmic</h3>
+          <span class="font-2-m cor-8">R$ 3999</span>
+        </a>
+      </li>
+
+    </ul>
+
+  </article>
+
 </body>
 
 </html>
