--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
 
   <main class="introducao-bg">
-    <div class="container introducao">
+    <div class="introducao container">
       <div class="introducao-conteudo">
         <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
         <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
