--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
           <span class="font-2-l-b cor-5">Tecnologia Avançada</span>
           <h2 class="font-1-xxl cor-0">você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
           <p class="font-2-l cor-5">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
-          <a class="font-1-l cor-p1">Escolha um modelo</a>
+          <a href="" class="font-1-l cor-p1">Escolha um modelo</a>
         </div>
         <div>
           <ul class="tecnologia-vantagens">
             <li>
-              <img src="./img/icones/eletrica.svg" />
+              <img src="./img/icones/eletrica.svg" alt="" />
               <h3 class="font-1-l cor-0">Motor Elétrico</h3>
               <p class="font-2-s cor-5">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
             </li>
             <li>
-              <img src="./img/icones/rastreador.svg" />
+              <img src="./img/icones/rastreador.svg" alt="" />
               <h3 class="font-1-l cor-0">Motor Elétrico</h3>
               <p class="font-2-s cor-5">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
             </li>
@@ -95,7 +95,7 @@
         </div>
       </div>
       <div class="tecnologia-img">
-        <img src="./img/fotos/tecnologia.jpg" />
+        <img src="./img/fotos/tecnologia.jpg" alt="" />
       </div>
     </div>
   </article>
