--- a/index.html
+++ b/index.html
@@ -99,9 +99,22 @@
       </div>
     </div>
   </article>
-  <article>
-    <h2>nossos parceiros.</h2>
-  </article>
+
+  <section class="parceiros" aria-label="Nossos Parceiros">
+    <h2 class="font-1-xxl cor-11 container">nossos parceiros<span class=" cor-p1">.</span></h2>
+    <div>
+      <ul>
+        <li><img src="./img/parceiros/caravan.svg" alt="Caravan" /></li>
+        <li><img src="./img/parceiros/ranek.svg" alt="Ranek" /></li>
+        <li><img src="./img/parceiros/handel.svg" alt="Haravan" /></li>
+        <li><img src="./img/parceiros/dogs.svg" alt="Dogs" /></li>
+        <li><img src="./img/parceiros/lescone.svg" alt="LeScone" /></li>
+        <li><img src="./img/parceiros/flexblog.svg" alt="FlexBox" /></li>
+        <li><img src="./img/parceiros/wildbeast.svg" alt="Wildbeast" /></li>
+        <li><img src="./img/parceiros/surfbot.svg" alt="Surfbot" /></li>
+      </ul>
+    </div>
+  </section>
 
 
 </body>
