--- a/index.html
+++ b/index.html
@@ -116,6 +116,17 @@
     </div>
   </section>
 
+  <section class="depoimento" aria-label="Depoimento">
+    <div class="depoimento-img">
+      <img src="./img/fotos/depoimento.jpg" alt="Pessoa pedalando bicicleta bikcraft" />
+    </div>
+    <div class="depoimento-conteudo">
+      <blockquote>
+        <p class="font-1-xl cor-p5">Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
+      </blockquote>
+      <span class="font-2-m cor-p4">Ana Júlia</span>
+    </div>
+  </section>
 
 </body>
 
