--- a/index.html
+++ b/index.html
@@ -159,6 +159,36 @@
       </div>
     </div>
   </article>
+
+  <footer class="footer-bg">
+    <div class="footer container">
+      <img class="footer-logo" src="./img/bikcraft.svg" alt="Bikcraft" />
+      <div class="footer-contato">
+        <h3 class="font-2-l-b cor-0">Contato</h3>
+        <ul class="font-2-m cor-5">
+          <li><a href="tel:+552199999999" class="cor-5">+55 21 9999-9999</a></li>
+          <li><a href="mailto:contato@bikcraft.com" class="cor-5">contato@bikcraft.com</a></li>
+          <li>Rua Ali Perto, 42 - Botafogo</li>
+          <li>Rio de Janeiro - RJ</li>
+        </ul>
+        <div class="footer-icons">
+          <img src="./img/redes/instagram.svg" alt="Instagram" />
+          <img src="./img/redes/facebook.svg" alt="Facebook" />
+          <img src="./img/redes/youtube.svg" alt="Youtube" />
+        </div>
+      </div>
+      <nav class="footer-nav" aria-label="nav-secundaria">
+        <h3 class="font-2-l-b cor-0">Informações</h3>
+        <ul class="font-1-m">
+          <li><a class="cor-5" href="">Bicicletas</a></li>
+          <li><a class="cor-5" href="">Seguros</a></li>
+          <li><a class="cor-5" href="">Contato</a></li>
+          <li><a class="cor-5" href="">Termos e Condições</a></li>
+        </ul>
+      </nav>
+      <span class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</span>
+    </div>
+  </footer>
 </body>
 
 </html>
