--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <body>
   <header class="header-bg">
     <div class="container header">
-      <img src="./img/bikcraft.svg" alt="Bikcraft" />
+      <a href="./index.html"><img src="./img/bikcraft.svg" alt="Bikcraft" /></a>
       <nav aria-label="nav-primaria">
         <ul class="header-menu font-1-m">
-          <li><a class="cor-0" href="">Bicicletas</a></li>
-          <li><a class="cor-0" href="">Seguros</a></li>
-          <li><a class="cor-0" href="">Contato</a></li>
+          <li><a class="cor-0" href="./bicicletas.html">Bicicletas</a></li>
+          <li><a class="cor-0" href="./seguros.html">Seguros</a></li>
+          <li><a class="cor-0" href="./contato.html">Contato</a></li>
         </ul>
       </nav>
     </div>
@@ -172,23 +172,24 @@
           <li>Rio de Janeiro - RJ</li>
         </ul>
         <div class="footer-icons">
-          <img src="./img/redes/instagram.svg" alt="Instagram" />
-          <img src="./img/redes/facebook.svg" alt="Facebook" />
-          <img src="./img/redes/youtube.svg" alt="Youtube" />
+          <a href="https://www.instagram.com/"><img src="./img/redes/instagram.svg" alt="Instagram" /></a>
+          <a href="https://www.facebook.com/"><img src="./img/redes/facebook.svg" alt="Facebook" /></a>
+          <a href="https://www.youtube.com/"><img src="./img/redes/youtube.svg" alt="Youtube" /></a>
         </div>
       </div>
       <nav class="footer-nav" aria-label="nav-secundaria">
         <h3 class="font-2-l-b cor-0">Informações</h3>
         <ul class="font-1-m">
-          <li><a class="cor-5" href="">Bicicletas</a></li>
-          <li><a class="cor-5" href="">Seguros</a></li>
-          <li><a class="cor-5" href="">Contato</a></li>
-          <li><a class="cor-5" href="">Termos e Condições</a></li>
+          <li><a class="cor-5" href="./bicicletas.html">Bicicletas</a></li>
+          <li><a class="cor-5" href="./seguros.html">Seguros</a></li>
+          <li><a class="cor-5" href="./contato.html">Contato</a></li>
+          <li><a class="cor-5" href="./termos.html">Termos e Condições</a></li>
         </ul>
       </nav>
       <span class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</span>
     </div>
   </footer>
+
 </body>
 
 </html>
