--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@
     <ul class="bicicletas-lista-itens">
       <li>
         <a href="">
-          <img src="./img/bicicletas/magic-home.jpg" alt="Bicileta" />
+          <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta Magic" />
           <h3 class="font-1-xl cor-11">Magic Might</h3>
           <span class="font-2-m cor-8">R$ 2499</span>
         </a>
       </li>
       <li>
         <a href="">
-          <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicileta" />
+          <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta Nimbus" />
           <h3 class="font-1-xl cor-11">Nimbus Stark</h3>
           <span class="font-2-m cor-8">R$ 4999</span>
         </a>
       </li>
       <li>
         <a href="">
-          <img src="./img/bicicletas/nebula-home.jpg" alt="Bicileta" />
+          <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta Nebula" />
           <h3 class="font-1-xl cor-11">Nebula Cosmic</h3>
           <span class="font-2-m cor-8">R$ 3999</span>
         </a>
