--- a/seguros.html
+++ b/seguros.html
@@ -5,8 +5,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Termos e condições">
-  <title>Termos e condições | Bikcraft</title>
+  <meta name="description" content="Você seguro.">
+  <title>Seguros | Bikcraft</title>
   <link rel="stylesheet" href="./css/style.css">
 
   <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -73,41 +73,72 @@
       <ul>
         <li>
           <img src="./img/icones/eletrica.svg" alt="" />
-          <h3 class="font-1-l cor-0">Reparo Elétrico</h3>
+          <h3 class="font-1-xl cor-0">Reparo Elétrico</h3>
           <p class="font-2-m cor-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
         </li>
         <li>
           <img src="./img/icones/carbono.svg" alt="" />
-          <h3 class=" font-1-l cor-0">Fibra de Carbono</h3>
+          <h3 class=" font-1-xl cor-0">Fibra de Carbono</h3>
           <p class="font-2-m cor-5">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
         </li>
         <li>
           <img src="./img/icones/sustentavel.svg" alt="" />
-          <h3 class="font-1-l cor-0">Sustentável</h3>
+          <h3 class="font-1-xl cor-0">Sustentável</h3>
           <p class="font-2-m cor-5">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
         </li>
         <li>
           <img src="./img/icones/rastreador.svg" alt="" />
-          <h3 class="font-1-l cor-0">Recuperação</h3>
+          <h3 class="font-1-xl cor-0">Recuperação</h3>
           <p class="font-2-m cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
         </li>
         <li>
           <img src="./img/icones/seguro.svg" alt="" />
-          <h3 class="font-1-l cor-0">Segurança</h3>
+          <h3 class="font-1-xl cor-0">Segurança</h3>
           <p class="font-2-m cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
         </li>
         <li>
           <img src="./img/icones/velocidade.svg" alt="" />
-          <h3 class="font-1-l cor-0">Rapidez</h3>
+          <h3 class="font-1-xl cor-0">Rapidez</h3>
           <p class="font-2-m cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
         </li>
       </ul>
     </div>
   </article>
 
-  <section aria-label="Perguntas Frequentes">
-    <h2 class="font-1-xxl cor-0">perguntas frequentes<span class="cor-p1">.</span></h2>
+  <section class="seguros-perguntas container" aria-label="Perguntas Frequentes">
+    <h2 class="font-1-xxl cor-11">perguntas frequentes<span class="cor-p1">.</span></h2>
+    <dl>
+      <div>
+        <dt class="font-1-m-b cor-11">Qual forma de pagamento vocês aceitam?</dt>
+        <dd class="font-2-m cor-8">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b cor-11">Qual forma de pagamento vocês aceitam?</dt>
+        <dd class="font-2-m cor-8">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b cor-11">Vocês possuem algum desconto?</dt>
+        <dd class="font-2-m cor-8">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b cor-11">Vocês possuem algum desconto?</dt>
+        <dd class="font-2-m cor-8">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b cor-11">Posso parcelar no boleto?</dt>
+        <dd class="font-2-m cor-8">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b cor-11">Quantas trocas posso fazer ao ano?</dt>
+        <dd class="font-2-m cor-8">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b cor-11">Qual Bikcraft devo escolher para o meu tamanho?</dt>
+        <dd class="font-2-m cor-8">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+    </dl>
   </section>
+
   <footer class="footer-bg">
     <div class="footer container">
       <img class="footer-logo" src="./img/bikcraft.svg" alt="Bikcraft" />
