--- a/bicicletas.html
+++ b/bicicletas.html
@@ -62,7 +62,7 @@
               <p>Rastreador</p>
             </li>
           </ul>
-          <a href="" class="botao seta">Mais sobre</a>
+          <a href="./bicicletas/nimbus.html" class="botao seta">Mais sobre</a>
         </div>
       </div>
       <div class="bicicletas-bg">
@@ -92,7 +92,7 @@
                 <p>Rastreador</p>
               </li>
             </ul>
-            <a href="" class="botao seta">Mais sobre</a>
+            <a href="./bicicletas/magic.html" class="botao seta">Mais sobre</a>
           </div>
         </div>
       </div>
@@ -122,7 +122,7 @@
               <p>Rastreador</p>
             </li>
           </ul>
-          <a href="" class="botao seta">Mais sobre</a>
+          <a href="./bicicletas/nebula.html" class="botao seta">Mais sobre</a>
         </div>
       </div>
     </div>
