--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="introducao-conteudo">
         <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
         <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a class="botao" href="">Selecione a sua</a>
+        <a class="botao" href="./bicicletas.html">Selecione a sua</a>
       </div>
       <div class="introducao-img">
         <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta elétrica preta" />
@@ -45,21 +45,21 @@
     <h2 class="font-1-xxl cor-11 container">escolha a sua<span class="cor-p1">.</span></h2>
     <ul class="bicicletas-lista-itens">
       <li>
-        <a href="">
+        <a href="./bicicletas/magic.html">
           <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta Magic" />
           <h3 class="font-1-xl cor-11">Magic Might</h3>
           <span class="font-2-m cor-8">R$ 2499</span>
         </a>
       </li>
       <li>
-        <a href="">
+        <a href="./bicicletas/nimbus.html">
           <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta Nimbus" />
           <h3 class="font-1-xl cor-11">Nimbus Stark</h3>
           <span class="font-2-m cor-8">R$ 4999</span>
         </a>
       </li>
       <li>
-        <a href="">
+        <a href="./bicicletas/nebula.html">
           <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta Nebula" />
           <h3 class="font-1-xl cor-11">Nebula Cosmic</h3>
           <span class="font-2-m cor-8">R$ 3999</span>
@@ -77,7 +77,7 @@
           <span class="font-2-l-b cor-5">Tecnologia Avançada</span>
           <h2 class="font-1-xxl cor-0">você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
           <p class="font-2-l cor-5">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
-          <a href="" class="font-1-l cor-p1">Escolha um modelo</a>
+          <a href="./bicicletas.html" class="font-1-l cor-p1">Escolha um modelo</a>
         </div>
         <div>
           <ul class="tecnologia-vantagens">
