--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -5,8 +5,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Termos e condições">
-  <title>Nebula Cosmic | Bikcraft</title>
+  <meta name="description" content="A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.">
+  <title>Magic Might | Bikcraft</title>
   <link rel="stylesheet" href="../css/style.css">
 
   <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
