--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Termos e condições">
+  <meta name="description" content="A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.">
   <title>Nebula Cosmic | Bikcraft</title>
   <link rel="stylesheet" href="../css/style.css">
 
