--- a/contato.html
+++ b/contato.html
@@ -89,8 +89,44 @@
     </div>
   </main>
 
-  <section class="container">
-    <h2>lojas locais.</h2>
+  <section class="container lojas">
+    <h2 class="font-1-xxl cor-11">lojas locais<span class="cor-p1">.</span></h2>
+    <div class="lojas-conteudo">
+      <div class="lojas-cidade">
+        <div class="lojas-img"><img src="./img/lojas/rj.jpg" alt="Localização Rio de Janeiro" /></div>
+        <div class="lojas-informacoes">
+          <h3 class="font-1-xl cor-11">Rio de Janeiro</h3>
+          <div class="font-2-s cor-8 lojas-informacoes-conteudo">
+            <div>
+              <p>Rua Ali Perto, 25</p>
+              <p>Rio de Janeiro - RJ</p>
+            </div>
+            <div>
+              <p>rio@bikcraft.com</p>
+              <p>21 9999-9999</p>
+            </div>
+          </div>
+          <span class="font-2-m-b cor-11">08-18h de seg à dom</span>
+        </div>
+      </div>
+      <div class="lojas-cidade">
+        <div class="lojas-img"><img src="./img/lojas/sp.jpg" alt="Localização Rio de Janeiro" /></div>
+        <div class="lojas-informacoes">
+          <h3 class="font-1-xl cor-11">São Paulo</h3>
+          <div class="font-2-s cor-8 lojas-informacoes-conteudo">
+            <div>
+              <p>Rua Ali Perto, 25</p>
+              <p>São Paulo - SP</p>
+            </div>
+            <div>
+              <p>sp@bikcraft.com</p>
+              <p>11 9999-99999</p>
+            </div>
+          </div>
+          <span class="font-2-m-b cor-11">08-18h de seg à dom</span>
+        </div>
+      </div>
+    </div>
   </section>
 
   <footer class="footer-bg">
