--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -43,7 +43,7 @@
         <div class="bicicleta-interna-conteudo">
           <p class="font-2-l cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <div class="bicicleta-interna-botao">
-            <a href="" class="botao">Comprar agora</a>
+            <a href="../orcamento.html" class="botao">Comprar agora</a>
             <div class="font-1-xs cor-5">
               <div class="botao-item">
                 <img src="../img/icones/entrega.svg" alt="" />
