--- a/seguros.html
+++ b/seguros.html
@@ -47,7 +47,7 @@
               <li>Suporte 08h às 18h</li>
               <li>Cobertura estadual</li>
             </ul>
-            <a href="" class="botao secundario">Inscreva-se</a>
+            <a href="./orcamento.html" class="botao secundario">Inscreva-se</a>
           </div>
           <div class="seguros-lista">
             <h3 class="font-1-xl cor-p1">OURO</h3>
@@ -60,7 +60,7 @@
               <li>Desconto em parceiros</li>
               <li>Acesso ao Clube Bikcraft</li>
             </ul>
-            <a href="" class="botao">Inscreva-se</a>
+            <a href="./orcamento.html" class="botao">Inscreva-se</a>
           </div>
         </div>
       </div>
