--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -43,7 +43,7 @@
         <div class="bicicleta-interna-conteudo">
           <p class="font-2-l cor-5">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <div class="bicicleta-interna-botao">
-            <a href="../orcamento.html" class="botao">Comprar agora</a>
+            <a href="../orcamento.html?tipo=bikcraft&produto=nebula" class="botao">Comprar agora</a>
             <div class="font-1-xs cor-5">
               <div class="botao-item">
                 <img src="../img/icones/entrega.svg" alt="" />
@@ -182,6 +182,7 @@
     </div>
   </footer>
 
+  <script src="../js/script.js"></script>
 </body>
 
 </html>
