--- a/bicicletas.html
+++ b/bicicletas.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Escolha a melhor para você.">
   <title>Bicicletas Elétricas | Bikcraft</title>
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
 
   <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -157,7 +158,7 @@
       <span class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</span>
     </div>
   </footer>
-
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
